--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
-    "postman": "^0.2.0"
+    "postman": "^0.2.0",
+    "readline-sync": "^1.4.10"
   }
 }
